--- a/src/index.css
+++ b/src/index.css
@@ -4,15 +4,23 @@ body {
   font-family: sans-serif;
 }
 
-main {
+/* .maindiv {
   width: 85vw;
   min-height: 80vh;
   max-width: 1024px;
   margin: 35px auto;
-  background: #fff;
+
   padding: 15px;
   box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
-}
+ background: url('./img/bg.jpg');
+ background-repeat: no-repeat;
+ background-size: cover;
+ color: whitesmoke;
+
+
+
+
+} */
 
 .grid-view {
   display: flex;
@@ -54,4 +62,5 @@ header h1 {
   justify-content: space-around;
   
   flex-wrap: wrap;
+  /* background-image:  url('./img/bg.jpg'); */
 }
